test/templates/jaeger-all-in-one-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o test
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger-all-in-one
  name: jaeger-all-in-one
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jaeger-all-in-one
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml -o test
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/demo: "true"
        io.kompose.service: jaeger-all-in-one
    spec:
      containers:
        - image: jaegertracing/all-in-one:latest
          name: jaeger-all-in-one
          ports:
            - containerPort: 16686
            - containerPort: 14268
            - containerPort: 14250
          resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o test
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger-all-in-one
  name: jaeger-all-in-one
spec:
  ports:
    - name: "16686"
      port: 16686
      targetPort: 16686
    - name: "14268"
      port: 14268
      targetPort: 14268
    - name: "14250"
      port: 14250
      targetPort: 14250
  selector:
    io.kompose.service: jaeger-all-in-one
status:
  loadBalancer: {}
