test/templates/otel-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o test
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: otel-collector
  name: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: otel-collector
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml -o test
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/demo: "true"
        io.kompose.service: otel-collector
    spec:
      containers:
        - args:
            - --config=/conf/collector.yaml
            - --log-level=DEBUG
          image: otel/opentelemetry-collector-dev:latest
          name: otel-collector
          ports:
            - containerPort: 1888
            - containerPort: 8888
            - containerPort: 8889
            - containerPort: 13133
            - containerPort: 4317
            - containerPort: 55679
          resources: {}
          volumeMounts:
          - mountPath: /conf
            name: collector-config
      restartPolicy: Always
      volumes:
      - configMap:
          items:
          - key: collector.yaml
            path: collector.yaml
          name: collector-config
        name: collector-config
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o test
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: otel-collector
  name: otel-collector
spec:
  ports:
    - name: "1888"
      port: 1888
      targetPort: 1888
    - name: "8888"
      port: 8888
      targetPort: 8888
    - name: "8889"
      port: 8889
      targetPort: 8889
    - name: "13133"
      port: 13133
      targetPort: 13133
    - name: "4317"
      port: 4317
      targetPort: 4317
    - name: "55670"
      port: 55670
      targetPort: 55679
  selector:
    io.kompose.service: otel-collector
status:
  loadBalancer: {}
