test/templates/postgresdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o test
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresdb
  name: postgresdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresdb
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml -o test
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/demo: "true"
        io.kompose.service: postgresdb
    spec:
      containers:
        - args:
            - -cmax_prepared_transactions=100
          env:
            - name: POSTGRES_DB
              value: demo
            - name: POSTGRES_HOST_AUTH_METHOD
              value: trust
            - name: POSTGRES_PASSWORD
              value: demo
            - name: POSTGRES_USER
              value: demo
          image: postgres:11.5
          name: postgresdb
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o test
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresdb
  name: postgresdb
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: postgresdb
status:
  loadBalancer: {}
