test/templates/reference-project-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -c
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: reference-project
  name: reference-project
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: reference-project
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert -c
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/demo: "true"
        io.kompose.service: reference-project
    spec:
      containers:
      - env:
        - name: QUARKUS_DATASOURCE_PASSWORD
          value: demo
        - name: QUARKUS_DATASOURCE_USERNAME
          value: demo
        - name: quarkus.datasource.jdbc.url
          value: jdbc:postgresql://postgresdb:5432/demo
        - name: quarkus.opentelemetry.tracer.exporter.jaeger.endpoint
          value: http://otel-agent:14250
        image: k3d-registry.localhost:5000/demo-quarkus:latest
        imagePullPolicy: ""
        name: reference-project
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert -c
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: reference-project
  name: reference-project
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: reference-project
status:
  loadBalancer: {}
