test/templates/victoriametrics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o test
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: victoriametrics
  name: victoriametrics
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: victoriametrics
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml -o test
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/demo: "true"
        io.kompose.service: victoriametrics
    spec:
      containers:
        - args:
            - --promscrape.config=/conf/vMetrics.yaml
          image: victoriametrics/victoria-metrics
          name: victoriametrics
          ports:
            - containerPort: 8428
            - containerPort: 8089
            - containerPort: 8089
              protocol: UDP
            - containerPort: 2003
            - containerPort: 2003
              protocol: UDP
            - containerPort: 4242
          resources: {}
          volumeMounts:
            - mountPath: /conf
              name: vmetrics-config
      restartPolicy: Always
      volumes:
      - configMap:
          items:
          - key: vMetrics.yaml
            path: vMetrics.yaml
          name: vmetrics-config
        name: vmetrics-config
status: {}

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml -o test
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: victoriametrics
  name: victoriametrics
spec:
  ports:
    - name: "8428"
      port: 8428
      targetPort: 8428
    - name: "8089"
      port: 8089
      targetPort: 8089
    - name: 8089-udp
      port: 8089
      protocol: UDP
      targetPort: 8089
    - name: "2003"
      port: 2003
      targetPort: 2003
    - name: 2003-udp
      port: 2003
      protocol: UDP
      targetPort: 2003
    - name: "4242"
      port: 4242
      targetPort: 4242
  selector:
    io.kompose.service: victoriametrics
status:
  loadBalancer: {}
