test/templates/zipkin-all-in-one-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-all-in-one
  labels:
    app: opentelemetry
    component: zipkin-all-in-one
spec:
  selector:
    matchLabels:
      app: opentelemetry
      component: zipkin-all-in-one
  minReadySeconds: 5
  progressDeadlineSeconds: 120
  replicas: 1
  template:
    metadata:
      labels:
        app: opentelemetry
        component: zipkin-all-in-one
    spec:
      containers:
      - name: zipkin-all-in-one
        image: openzipkin/zipkin:latest
        ports:
        - containerPort: 9411

---

apiVersion: v1
kind: Service
metadata:
  name: zipkin-all-in-one
  labels:
    app: opentelemetry
    component: zipkin-all-in-one
spec:
  selector:
    component: zipkin-all-in-one
  ports:
    - name: zipkin
      protocol: TCP
      port: 9411
      targetPort: 9411
